# cardiac_murmur

./: .gitignore  Main.ipynb  README.md  app.py  pyproject.toml  requirements.txt  test_data.csv
document/: Main.aux  Main.bbl  Main.bcf  Main.blg  Main.fdb_latexmk  Main.fls  Main.out  Main.run.xml  Main.tex  Main.toc  references.bib  title_page.tex
model_data/: hw_scaler.pkl
