[project]
name = "cardiac-murmur"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = "==3.11.*"
dependencies = [
    "fpdf>=1.7.2",
    "librosa>=0.11.0",
    "matplotlib>=3.10.8",
    "numpy<2",
    "opencv-python-headless>=4.11.0.86",
    "pandas>=2.3.3",
    "pywavelets>=1.9.0",
    "scikit-learn>=1.8.0",
    "streamlit>=1.55.0",
    "tensorflow==2.15.0",
]

[dependency-groups]
dev = [
    "ipykernel>=7.2.0",
]
